[package]
name = "zeeso"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
bootloader = "0.9.23"
spin = "0.5.2"

[profile.dev]

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
